--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
+
 }
