--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_NET_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 播放界面防止屏幕休眠 -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".NeteaseApplication"
@@ -19,8 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <service
-            android:name=".service.PlayerIntentService"
-            android:exported="false" />
+            android:name=".service.MediaPLayerService"
+            android:enabled="true"
+            android:exported="true"></service>
 
         <activity android:name=".activity.LocalMusicActivity" />
         <activity android:name=".activity.LoginActivity" />
