--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,7 @@ android {
             }
         }
 
-        ndk {
-//            abiFilters "armeabi-v7a"
-        }
+        ndk { abiFilters "armeabi-v7a" }
     }
     buildFeatures {
         viewBinding true
@@ -45,11 +43,10 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation project(path: ':bubbleplayer')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta02'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-rc01'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
@@ -89,6 +86,10 @@ dependencies {
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0'
 
     implementation 'com.google.android.exoplayer:exoplayer:2.13.2'
+
+//    banner
+    implementation 'com.github.zhpanvip:BannerViewPager:2.1.0'
+    implementation 'com.youth.banner:banner:2.1.0'
 
 //    java 实体类免于写Getter Setter
 //    compileOnly 'org.projectlombok:lombok:1.18.16'
