--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,14 +41,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.4.0-alpha01'
+    implementation 'com.google.android.material:material:1.4.0-beta01'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-rc01'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
@@ -87,16 +87,7 @@ dependencies {
     //viewpager indicator
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0'
 
-    implementation 'com.google.android.exoplayer:exoplayer:2.13.2'
+    implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
 
-//    banner
-//    implementation 'com.github.zhpanvip:BannerViewPager:2.1.0'
     implementation 'com.youth.banner:banner:2.1.0'
-
-//    java 实体类免于写Getter Setter
-//    implementation 'org.projectlombok:lombok:1.18.16'
-//    annotationProcessor 'org.projectlombok:lombok:1.18.16'
-//
-//    testCompileOnly 'org.projectlombok:lombok:1.18.16'
-//    testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
