--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,34 +41,34 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.4.0-beta01'
+    implementation 'com.google.android.material:material:1.5.0-alpha01'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.7'
 
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.13'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
     implementation 'com.alibaba:arouter-api:1.5.1'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.5.1'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.5.2'
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'me.jessyan:autosize:1.2.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.12'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
 
 //    腾讯持久化存储
-    implementation 'com.tencent:mmkv-static:1.2.7'
+    implementation 'com.tencent:mmkv-static:1.2.10'
 
     implementation 'com.scwang.smart:refresh-layout-kernel:2.0.1'
     implementation 'com.scwang.smart:refresh-header-radar:2.0.1'
@@ -87,7 +87,7 @@ dependencies {
     //viewpager indicator
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0'
 
-    implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.14.2'
 
     implementation 'com.youth.banner:banner:2.1.0'
 }
