--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="n">
-        <activity android:name=".activity.discovery.RecommendPerDayActivity"></activity>
+        <activity android:name=".activity.discovery.RecommendPerDayActivity"/>
 
         <service
             android:name=".service.MediaPLayerService"
@@ -40,14 +40,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.MainActivity"
+            android:theme="@style/LauncherTheme"/>
 
-        <meta-data
-            android:name="design_width_in_dp"
-            android:value="360" />
-        <meta-data
-            android:name="design_height_in_dp"
-            android:value="640" />
     </application>
 
 </manifest>
