--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:networkSecurityConfig="@xml/network"
         android:roundIcon="@mipmap/app_icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+        android:theme="@style/FullScreenTheme"
         tools:targetApi="n">
         <activity android:name=".activity.discovery.RecommendPerDayActivity"/>
 
@@ -40,8 +40,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity"
-            android:theme="@style/LauncherTheme"/>
+        <activity android:name=".activity.MainActivity"/>
 
     </application>
 
