--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation 'com.alibaba:arouter-api:1.5.1'
     annotationProcessor 'com.alibaba:arouter-compiler:1.5.2'
     implementation 'org.greenrobot:eventbus:3.2.0'
-    implementation 'me.jessyan:autosize:1.2.1'
+//    implementation 'me.jessyan:autosize:1.2.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.12'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
 
