--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.0.13'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
-    implementation 'com.alibaba:arouter-api:1.5.1'
+    implementation 'com.alibaba:arouter-api:1.5.2'
     annotationProcessor 'com.alibaba:arouter-compiler:1.5.2'
     implementation 'org.greenrobot:eventbus:3.2.0'
 //    implementation 'me.jessyan:autosize:1.2.1'
@@ -82,7 +82,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
     //viewpager indicator
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0'
@@ -90,4 +90,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.14.2'
 
     implementation 'com.youth.banner:banner:2.1.0'
+
+    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
 }
